Bug 243894 - Regression: autocompletion has a mind of its own
Summary: Regression: autocompletion has a mind of its own
Status: VERIFIED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-07 22:48 UTC by Sabine Faure
Modified: 2010-07-08 20:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-07-07 22:48:02 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The autocompletion is changed once the user clicks on the 'send' button.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail
- Click on 'new'
- Fill in the recipient using the autocompletion, the subject and a few words
- Check that the autocompletion is correct
- Click on 'Send'
- Open the email from the Sent-mail folder

Actual Results:  
The email is not received since the autocompletion has been changed into something that has no sense.
For example: sabinetest@kdab.com becomes sabinet@kailin or sabine@kailin or sabinetes@kailin (kailin is my laptop name)

The user does not receive any 'Undelivered message' email eventhough this could be a good idea in a case like this.

Expected Results:  
This should not happen. The autocompletion should not be changed after the user clicks on 'send'

Trunk, Svn Rev 1147197
Comment 1 Sabine Faure 2010-07-07 23:08:26 UTC
While the autocompletion changed a working email address into an non working one, emails got stuck in my outbox again and now remain there until I reset my configuration (they are impossible to delete)

Trunk, Svn Rev 1147197
Comment 2 Casey Link 2010-07-08 00:29:38 UTC
SVN commit 1147336 by link:

Properly set the modified flag in the recipients editor.

Fixes the "I auto completed XXX, but kmail actually sent it to YYY" issues.

BUG: 243894
CCMAIL: leo@kdab.com

 M  +2 -0      recipientline.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1147336
Comment 3 Sabine Faure 2010-07-08 20:48:46 UTC
It is corrected now.

The autocompletion works fine again. The emails are properly sent to the outbox and then stored in the sent-mail folder. The recipient receives the email properly.

Trunk, Svn Rev 1147490