Properly set the modified flag in the recipients editor.

Fixes the "I auto completed XXX, but kmail actually sent it to YYY" issues.

BUG: 243894
CCMAIL: leo@kdab.com

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1147336